--- a/department_management/template/dashboard.html
+++ b/department_management/template/dashboard.html
@@ -3,22 +3,30 @@
 {% block 'main' %}
 
 
-<div class="container-fluid mt-5">
+<div class="container-fluid mt-5" style="display: flex; min-height: 100vh;">
 
 
-    <div class="row">
+    <div class="row flex-grow-1">
 
 
         <!-- Sidebar -->
-        <div class="col-md-3">
-            <h5>Side menu Bar</h5>
-            <p>Side menus can be listed to this side</p>
+        <div class="col-md-3" style="display: flex; flex-direction: column;">
+            <div class="card flex-grow-1">
+                <div class="card-header">
+                    <h5>Side Menu</h5>
+                </div>
+                <div class="card-body" style="overflow-y: auto;">
+                    <ul class="list-unstyled">
+                        <li><a href="/dashboard" class="nav-link">Dashboard</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
 
         <!-- Main Content -->
         <div class="col-md-9">
-            
+
             <!-- Create Department Button -->
             <div class="mb-3 ">
 
@@ -27,7 +35,7 @@
                         Create Department
                     </a>
                 </button>
-            
+
             </div>
 
             <!-- Table -->
@@ -58,7 +66,7 @@
                                 <a href="/update_department/{{ d.id }}" class="text-white text-decoration-none">Edit</a>
                             </button>
                         </td>
-                        
+
 
                         <td>
 
@@ -66,10 +74,10 @@
                                 <a href="/delete_department/{{ d.id }}" class="text-white text-decoration-none">
                                     Delete
                                 </a>
-                            </button>  
+                            </button>
 
-                        </td>                        
-                        
+                        </td>
+
                     </tr>
 
                     {% endfor %}
@@ -77,7 +85,7 @@
                 </tbody>
 
             </table>
-            
+
 
         </div>
 
